// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe mostrar el componente con la imagen del producto 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <img
      alt="Product"
      class="productImg undefined"
      src="./coffee-mug-card.png"
    />
  </div>
</DocumentFragment>
`;

exports[`ProductImage Debe mostrar el componente correctamente con la img personalizada 1`] = `
<DocumentFragment>
  <img
    alt="Product"
    class="productImg custom-class"
    src="https://hola.png"
  />
</DocumentFragment>
`;
